Fix issue with grey icons.
While working on my update to Ludsocials, I messed up the thing that for black icons, when dark mode is on, they become grey.

--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,10 @@ body {
 }
 
 #grey {
+  color: var(--grey);
+}
+
+#ludsocials-grey {
   color: var(--ludsocials-grey);
 }
 
